--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ flask-restplus==0.13.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
 jsonschema==3.2.0
